# deployer-manager

./: .gitignore  CONTRIBUTING.md  LICENCE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: rust-tests.yaml
scripts/: bump-interactive.js  bump-version.sh
src/: App.svelte  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: deployments.rs  environments.rs  git.rs  mod.rs  projects.rs  releases.rs
src-tauri/src/models/: config.rs  deployment.rs  environment.rs  mod.rs  project.rs  release.rs
src-tauri/src/services/: config.rs  git.rs  hosts.rs  mod.rs  process.rs  project.rs
src-tauri/tests/: integration_tests.rs
src/components/: AddProjectDialog.svelte  DeployForm.svelte  DeployOutput.svelte  EnvironmentCard.svelte  ProjectList.svelte  ProjectPanel.svelte  ReleaseHistory.svelte
src/lib/: api.ts  events.ts  stores.ts
